  * Update symbols files.
  * Update debian/rules:
    - remove catalan translation, obsolete and should have been contributed
      upstream.
    - pass -opengl desktop and -no-egl configure options. (Closes: #616391)
  * Update debian/control:
    - Suggests/Recommends QML plugin packages to libqt4-declarative and
      qt4-demos packages. (Closes: #597900)

 -- Fathi Boudra <fabo@debian.org>  Thu, 03 Mar 2011 20:58:36 +0200

qt4-x11 (4:4.7.1-2) experimental; urgency=low

  [ Pino Toscano ]
  * libqt4-network.install: specify the single directory with bearer plugins,
    instead of the single plugins; this avoids build failures due to few
    bearers being compiled for Linux only. (Closes: #606063)
  * Update debian/control:
    - Add qt4-qmlviewer as suggestion for libqt4-declarative and qt4-demos.

  [ Modestas Vainius ]
  * Confirm symbol files for 4.7.1 on alpha, armel, i386, ia64, mipsel,
    powerpc, sparc.
  * Add appropriate Build-Depends-Package field to libqt4-declarative and
    libqt4-openvg symbol files.

  [ Frederik Schwarzer ]
  * Add upstream patch
    0002_backport_6ae84f1_fix_QTextEdit_selectAll_crash.diff
    that fixes a crash when using the backspace key under
    various circumstances. (Closes: #606405)

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 18 Dec 2010 18:54:28 +0200

qt4-x11 (4:4.7.1-1) experimental; urgency=low

  * New upstream release. (Closes: #605364)

  [ Fathi Boudra ]
  * Remove patches:
    - 0001_webkit_self_injection_into_qt_configuration.patch - stolen upstream
    - 0002_fix_qstatictext_with_opengl1_engine.patch - stolen upstream
    - 0003_add_three_new_style-hints_to_qfont.patch - stolen upstream
    - 0004_fix_qstatictext_copy_constructor.patch - stolen upstream
  * Refresh patches.
  * Update installed files.
  * Update symbols files.

  [ Pino Toscano ]
  * Rework and replace patch 50_kfreebsd_build_fix.diff with two new patches: