@@ -71,7 +71,7 @@ GenericName[zh_CN]=文档浏览器
 GenericName[zh_TW]=文件閱讀器
 GenericName[zu]=Umcingi Woshicilelo
 X-KDE-StartupNotify=true
-Icon=assistant
+Icon=assistant-qt4
 Terminal=false
 Type=Application
 
