@@ -72,7 +72,7 @@ X-KDE-StartupNotify=true
 MimeType=application/x-linguist;
 Terminal=false
 Type=Application
-Icon=linguist
+Icon=linguist-qt4
 
 GenericName[bg]=Инструмент за превод
 Name[hu]=Qt 4 Nyelvész
