@@ -3,7 +3,7 @@ Categories=Qt;Settings;
 Exec=/usr/bin/qtconfig-qt4
 Name=Qt 4 Settings
 X-KDE-StartupNotify=true
-Icon=qtconfig
+Icon=qtconfig-qt4
 Terminal=false
 Type=Application
 
